fix: YamlG4Parser Java 8 兼容（readAllBytes + toList）
- readAllBytes() → ByteArrayOutputStream 手动读取
- .toList() → .collect(Collectors.toList())